Fix: Corregir codificación UTF-8 y orden de apodos en español
- Eliminar BOM de todos los archivos en common/ (41 archivos corregidos)
- Agregar claves de localización faltantes para decisiones (_confirm)
- Agregar propiedades picture y ai_check_interval a todas las decisiones
- Corregir orden de apodos compuestos en español (Rey Soldado, Asesino de Búlgaros, etc.)
- Reorganizar sistema modular de apodos en carpetas por categoría
- Agregar 29 archivos de scripted_effects categorizados (animales, colores, armas, fe, etc.)
- Limpiar archivos temporales de desarrollo

--- a/localization/spanish/ac_nickname_l_spanish.yml
+++ b/localization/spanish/ac_nickname_l_spanish.yml
@@ -15,8 +15,8 @@
  nick_custom_nickname_f:0 "la Costumbre Apodo"
  nick_daughter_freya:0 "la Hija de Freya"
  nick_daughter_frigg:0 "la Hija de Frigg"
- nick_death_claw:0 "el Muerte Garra"
- nick_death_claw_f:0 "la Muerte Garra"
+ nick_death_claw:0 "el Garra de la Muerte"
+ nick_death_claw_f:0 "la Garra de la Muerte"
  nick_dragonheart:0 "el Corazón de Dragón"
  nick_dragonheart_f:0 "la Corazón de Dragón"
  nick_fast_sailing:0 "el Rápido Navegante"
@@ -31,14 +31,14 @@
  nick_hist_bloodaxe_f:0 "la Hacha de Sangre"
  nick_hist_bluetooth:0 "el Diente Azul"
  nick_hist_bluetooth_f:0 "la Diente Azul"
- nick_hist_bulgar_slayer:0 "el Búlgaro Asesino"
- nick_hist_bulgar_slayer_f:0 "la Búlgara Asesina"
+ nick_hist_bulgar_slayer:0 "el Asesino de Búlgaros"
+ nick_hist_bulgar_slayer_f:0 "la Asesina de Búlgaros"
  nick_hist_campeador:0 "el Campeador"
  nick_hist_campeador_f:0 "la Campeadora"
  nick_hist_curtmantle:0 "el Manto Corto"
  nick_hist_curtmantle_f:0 "la Manto Corto"
- nick_hist_hairy_breeches:0 "el Peludo Calzones"
- nick_hist_hairy_breeches_f:0 "la Peluda Calzones"
+ nick_hist_hairy_breeches:0 "el Calzones Peludos"
+ nick_hist_hairy_breeches_f:0 "la Calzones Peludos"
  nick_hist_hardrada:0 "el Hardrada"
  nick_hist_hardrada_f:0 "la Hardrada"
  nick_hist_ironside:0 "el Costado de Hierro"
@@ -50,11 +50,11 @@
  nick_hist_redbeard:0 "el Barba Roja"
  nick_hist_redbeard_f:0 "la Barba Roja"
  nick_hist_scourge_of_god:0 "el Azote de Dios"
- nick_hist_scourge_of_god_f:0 "la Azote de Diosa"
- nick_hist_snake_in_the_eye:0 "el Serpiente en Ojo"
- nick_hist_snake_in_the_eye_f:0 "la Serpiente en Ojo"
- nick_hist_stupor_mundi:0 "el Estupor Mundo"
- nick_hist_stupor_mundi_f:0 "la Estupor Mundo"
+ nick_hist_scourge_of_god_f:0 "la Azote de Dios"
+ nick_hist_snake_in_the_eye:0 "la Serpiente en el Ojo"
+ nick_hist_snake_in_the_eye_f:0 "la Serpiente en el Ojo"
+ nick_hist_stupor_mundi:0 "el Estupor del Mundo"
+ nick_hist_stupor_mundi_f:0 "la Estupor del Mundo"
  nick_hist_the_abandoned:0 "el Abandonado"
  nick_hist_the_abandoned_f:0 "la Abandonada"
  nick_hist_the_abstemious:0 "el Abstemio"
@@ -131,14 +131,14 @@
  nick_hist_the_balance_f:0 "la Balanza"
  nick_hist_the_bald:0 "el Calvo"
  nick_hist_the_bald_f:0 "la Calva"
- nick_hist_the_bald_pate:0 "el Calvo Coronilla"
- nick_hist_the_bald_pate_f:0 "la Calva Coronilla"
+ nick_hist_the_bald_pate:0 "el de Coronilla Calva"
+ nick_hist_the_bald_pate_f:0 "la de Coronilla Calva"
  nick_hist_the_ballistarius:0 "el Ballistario"
- nick_hist_the_ballistarius_f:0 "la Ballistario"
+ nick_hist_the_ballistarius_f:0 "la Ballistaria"
  nick_hist_the_banner:0 "el Estandarte"
  nick_hist_the_banner_f:0 "la Estandarte"
- nick_hist_the_banner_lord:0 "el Estandarte Señor"
- nick_hist_the_banner_lord_f:0 "la Estandarte Señor"
+ nick_hist_the_banner_lord:0 "el Estandarte del Señor"
+ nick_hist_the_banner_lord_f:0 "la Estandarte del Señor"
  nick_hist_the_bannered:0 "el Abanderado"
  nick_hist_the_bannered_f:0 "la Abanderada"
  nick_hist_the_barbed:0 "el Afilado"
@@ -148,13 +148,13 @@
  nick_hist_the_barley:0 "el Cebada"
  nick_hist_the_barley_f:0 "la Cebada"
  nick_hist_the_bastard:0 "el Bastardo"
- nick_hist_the_bastard_born:0 "el Bastardo Nacido"
- nick_hist_the_bastard_born_f:0 "la Bastarda Nacida"
+ nick_hist_the_bastard_born:0 "el Nacido Bastardo"
+ nick_hist_the_bastard_born_f:0 "la Nacida Bastarda"
  nick_hist_the_bastard_f:0 "la Bastarda"
  nick_hist_the_bastion:0 "el Bastión"
  nick_hist_the_bastion_f:0 "la Bastión"
- nick_hist_the_battle_thorn:0 "el Batalla Espina"
- nick_hist_the_battle_thorn_f:0 "la Batalla Espina"
+ nick_hist_the_battle_thorn:0 "el Espina de Batalla"
+ nick_hist_the_battle_thorn_f:0 "la Espina de Batalla"
  nick_hist_the_battleborn:0 "el Nacido en Batalla"
  nick_hist_the_battleborn_f:0 "la Nacida en Batalla"
  nick_hist_the_battlewise:0 "el Sabio de Batallas"
@@ -162,7 +162,7 @@
  nick_hist_the_beacon:0 "el Faro"
  nick_hist_the_beacon_f:0 "la Faro"
  nick_hist_the_bear:0 "el Oso"
- nick_hist_the_bear_f:0 "la Oso"
+ nick_hist_the_bear_f:0 "la Osa"
  nick_hist_the_bearded:0 "el Barbudo"
  nick_hist_the_bearded_f:0 "la Barbuda"
  nick_hist_the_bell:0 "la Campana"
@@ -177,14 +177,14 @@
  nick_hist_the_benevolent_f:0 "la Benevolente"
  nick_hist_the_bewitched:0 "el Embrujado"
  nick_hist_the_bewitched_f:0 "la Embrujada"
- nick_hist_the_big_hand:0 "el Grande Mano"
- nick_hist_the_big_hand_f:0 "la Grande Mano"
+ nick_hist_the_big_hand:0 "el Mano Grande"
+ nick_hist_the_big_hand_f:0 "la Mano Grande"
  nick_hist_the_billhook:0 "el Podón"
  nick_hist_the_billhook_f:0 "la Podón"
  nick_hist_the_black:0 "el Negro"
  nick_hist_the_black_f:0 "la Negra"
- nick_hist_the_black_prince:0 "el Negro Príncipe"
- nick_hist_the_black_prince_f:0 "la Negra Príncipe"
+ nick_hist_the_black_prince:0 "el Príncipe Negro"
+ nick_hist_the_black_prince_f:0 "la Princesa Negra"
  nick_hist_the_blade:0 "la Hoja"
  nick_hist_the_blade_f:0 "la Hoja"
  nick_hist_the_blessed:0 "el Bendito"
@@ -192,21 +192,21 @@
  nick_hist_the_blind:0 "el Ciego"
  nick_hist_the_blind_f:0 "la Ciega"
  nick_hist_the_blooded:0 "el Sangriento"
- nick_hist_the_blooded_blade:0 "el Sangriento Hoja"
- nick_hist_the_blooded_blade_f:0 "la Sangrienta Hoja"
+ nick_hist_the_blooded_blade:0 "el de Hoja Sangrienta"
+ nick_hist_the_blooded_blade_f:0 "la de Hoja Sangrienta"
  nick_hist_the_blooded_f:0 "la Sangrienta"
- nick_hist_the_blooded_hand:0 "el Sangriento Mano"
- nick_hist_the_blooded_hand_f:0 "la Sangrienta Mano"
+ nick_hist_the_blooded_hand:0 "el de Mano Sangrienta"
+ nick_hist_the_blooded_hand_f:0 "la de Mano Sangrienta"
  nick_hist_the_bloodletter:0 "el Derramador de Sangre"
  nick_hist_the_bloodletter_f:0 "la Derramadora de Sangre"
  nick_hist_the_boar:0 "el Jabalí"
  nick_hist_the_boar_f:0 "la Jabalí"
- nick_hist_the_boar_standard:0 "el Jabalí Estandarte"
- nick_hist_the_boar_standard_f:0 "la Jabalí Estandarte"
- nick_hist_the_boar_tusk:0 "el Jabalí Colmillo"
- nick_hist_the_boar_tusk_f:0 "la Jabalí Colmillo"
- nick_hist_the_bog_treader:0 "el Pantano Pisador"
- nick_hist_the_bog_treader_f:0 "la Pantano Pisadora"
+ nick_hist_the_boar_standard:0 "el del Estandarte de Jabalí"
+ nick_hist_the_boar_standard_f:0 "la del Estandarte de Jabalí"
+ nick_hist_the_boar_tusk:0 "el Colmillo de Jabalí"
+ nick_hist_the_boar_tusk_f:0 "la Colmillo de Jabalí"
+ nick_hist_the_bog_treader:0 "el Pisador de Pantanos"
+ nick_hist_the_bog_treader_f:0 "la Pisadora de Pantanos"
  nick_hist_the_bold:0 "el Audaz"
  nick_hist_the_bold_f:0 "la Audaz"
  nick_hist_the_boneless:0 "el Sin Huesos"
@@ -218,27 +218,27 @@
  nick_hist_the_borderlord:0 "el Señor de la Frontera"
  nick_hist_the_borderlord_f:0 "la Señora de la Frontera"
  nick_hist_the_bow:0 "el Arco"
- nick_hist_the_bow_f:0 "la Arco"
+ nick_hist_the_bow_f:0 "el Arco"
  nick_hist_the_bowmaster:0 "el Maestro del Arco"
  nick_hist_the_bowmaster_f:0 "la Maestra del Arco"
  nick_hist_the_bowyer:0 "el Arquero"
  nick_hist_the_bowyer_f:0 "la Arquera"
  nick_hist_the_braided:0 "el Trenzado"
  nick_hist_the_braided_f:0 "la Trenzada"
- nick_hist_the_brand:0 "el Marca"
- nick_hist_the_brand_f:0 "la Marca"
+ nick_hist_the_brand:0 "el de la Marca"
+ nick_hist_the_brand_f:0 "la de la Marca"
  nick_hist_the_brave:0 "el Valiente"
  nick_hist_the_brave_f:0 "la Valiente"
  nick_hist_the_brazen:0 "el Descarado"
  nick_hist_the_brazen_f:0 "la Descarada"
  nick_hist_the_brazier:0 "el Brasero"
  nick_hist_the_brazier_f:0 "la Brasero"
- nick_hist_the_bread:0 "el Pan"
- nick_hist_the_bread_f:0 "la Pan"
+ nick_hist_the_bread:0 "el de Pan"
+ nick_hist_the_bread_f:0 "la de Pan"
  nick_hist_the_brewer:0 "el Cervecero"
  nick_hist_the_brewer_f:0 "la Cervecera"
- nick_hist_the_bridge_lord:0 "el Puente Señor"
- nick_hist_the_bridge_lord_f:0 "la Puente Señor"
+ nick_hist_the_bridge_lord:0 "el Señor del Puente"
+ nick_hist_the_bridge_lord_f:0 "la Señora del Puente"
  nick_hist_the_bridgewarden:0 "el Guardián del Puente"
  nick_hist_the_bridgewarden_f:0 "la Guardiana del Puente"
  nick_hist_the_bridgewright:0 "el Constructor de Puentes"
@@ -261,7 +261,7 @@
  nick_hist_the_bull:0 "el Toro"
  nick_hist_the_bull_f:0 "la Toro"
  nick_hist_the_bulldog:0 "el Dogo"
- nick_hist_the_bulldog_f:0 "la Dogo"
+ nick_hist_the_bulldog_f:0 "la Doga"
  nick_hist_the_butcher:0 "el Carnicero"
  nick_hist_the_butcher_f:0 "la Carnicera"
  nick_hist_the_butler:0 "el Mayordomo"
@@ -284,8 +284,8 @@
  nick_hist_the_castellan_f:0 "la Castellana"
  nick_hist_the_castigator:0 "el Castigador"
  nick_hist_the_castigator_f:0 "la Castigadora"
- nick_hist_the_castle_builder:0 "el Castillo Constructor"
- nick_hist_the_castle_builder_f:0 "la Castillo Constructora"
+ nick_hist_the_castle_builder:0 "el Constructor de Castillos"
+ nick_hist_the_castle_builder_f:0 "la Constructora de Castillos"
  nick_hist_the_cataloguer:0 "el Catalogador"
  nick_hist_the_cataloguer_f:0 "la Catalogadora"
  nick_hist_the_catholic:0 "el Católico"
@@ -293,13 +293,13 @@
  nick_hist_the_caudillo:0 "el Caudillo"
  nick_hist_the_caudillo_f:0 "la Caudillo"
  nick_hist_the_cautious:0 "el Cauteloso"
- nick_hist_the_cautious_blade:0 "el Cauteloso Hoja"
- nick_hist_the_cautious_blade_f:0 "la Cautelosa Hoja"
+ nick_hist_the_cautious_blade:0 "el de Hoja Cautelosa"
+ nick_hist_the_cautious_blade_f:0 "la de Hoja Cautelosa"
  nick_hist_the_cautious_f:0 "la Cautelosa"
  nick_hist_the_censer:0 "el Incensario"
- nick_hist_the_censer_f:0 "la Incensario"
- nick_hist_the_censer_lord:0 "el Incensario Señor"
- nick_hist_the_censer_lord_f:0 "la Incensario Señor"
+ nick_hist_the_censer_f:0 "la Incensaria"
+ nick_hist_the_censer_lord:0 "el Señor del Incensario"
+ nick_hist_the_censer_lord_f:0 "la Señora del Incensario"
  nick_hist_the_ceremonious:0 "el Ceremonioso"
  nick_hist_the_ceremonious_f:0 "la Ceremoniosa"
  nick_hist_the_chain:0 "la Cadena"
@@ -1356,7 +1356,7 @@
  nick_hist_the_snowborn_f:0 "la Nacida de la Nieve"
  nick_hist_the_snowcloak:0 "el Capa de Nieve"
  nick_hist_the_snowcloak_f:0 "la Capa de Nieve"
- nick_hist_the_soldier_king:0 "el Soldado Rey"
+ nick_hist_the_soldier_king:0 "el Rey Soldado"
  nick_hist_the_somber:0 "el Sombrío"
  nick_hist_the_somber_f:0 "la Sombría"
  nick_hist_the_spade:0 "el Pala"
@@ -2059,6 +2059,7 @@
  ac_nickname_toggle_debug:0 "Activar/Desactivar Modo Debug de Apodos"
  ac_nickname_toggle_debug_desc:0 "Activa o desactiva el modo debug para el sistema de apodos. El modo debug proporciona herramientas de prueba e información."
  ac_nickname_toggle_debug_tooltip:0 "Alternar modo debug para pruebas de apodos"
+ ac_nickname_toggle_debug_confirm:0 "Alternar Modo Debug"
  ac_nickname_debug_mode_on_tt:0 "El modo debug está ahora #EMP ACTIVADO#!. Ahora puedes acceder a las herramientas de prueba."
  ac_nickname_debug_mode_off_tt:0 "El modo debug está ahora #EMP DESACTIVADO#!. Las herramientas de prueba están ocultas."
 
@@ -2071,6 +2072,7 @@
  ac_nickname_clear:0 "Limpiar Apodo"
  ac_nickname_clear_desc:0 "Elimina tu apodo actual para probar recibir uno nuevo."
  ac_nickname_clear_tooltip:0 "Eliminar tu apodo actual"
+ ac_nickname_clear_confirm:0 "Limpiar Apodo"
  ac_nickname_clear_tt:0 "Tu apodo ha sido eliminado. Ahora puedes recibir uno nuevo."
 
  ac_nickname_show_info:0 "Mostrar Elegibilidad de Apodos"
@@ -2089,27 +2091,32 @@
  ac_nickname_manual_block:0 "Bloquear Apodos Manualmente"
  ac_nickname_manual_block_desc:0 "Evita que recibas cualquier apodo."
  ac_nickname_manual_block_tooltip:0 "Bloquear asignación de apodos para este personaje"
+ ac_nickname_manual_block_confirm:0 "Bloquear Apodos"
  ac_nickname_manual_block_tt:0 "Ya no recibirás apodos hasta que te desbloquees."
  ac_nickname_not_already_blocked_tt:0 "Actualmente no estás bloqueado"
 
  ac_nickname_manual_unblock:0 "Desbloquear Apodos Manualmente"
  ac_nickname_manual_unblock_desc:0 "Permite recibir apodos nuevamente."
  ac_nickname_manual_unblock_tooltip:0 "Desbloquear asignación de apodos para este personaje"
+ ac_nickname_manual_unblock_confirm:0 "Desbloquear Apodos"
  ac_nickname_manual_unblock_tt:0 "Ahora puedes recibir apodos nuevamente."
 
  ac_nickname_give_all:0 "Dar Apodos a Todos los Personajes"
  ac_nickname_give_all_desc:0 "Activa la asignación de apodos para TODOS los personajes vivos de 16+ años que no tienen apodo. Esto puede tardar un momento en procesarse."
  ac_nickname_give_all_tooltip:0 "Dar apodos a todos los personajes elegibles"
+ ac_nickname_give_all_confirm:0 "Dar Apodos a Todos"
  ac_nickname_give_all_tt:0 "Todos los personajes vivos de 16+ años sin apodos serán evaluados para asignación de apodos. Este proceso puede tardar algunos días dentro del juego."
 
  ac_nickname_clear_all:0 "Limpiar Todos los Apodos"
  ac_nickname_clear_all_desc:0 "Elimina los apodos de TODOS los personajes vivos en el mundo. ¡Usa con precaución!"
  ac_nickname_clear_all_tooltip:0 "Limpiar todos los apodos globalmente"
+ ac_nickname_clear_all_confirm:0 "Limpiar Todos los Apodos"
  ac_nickname_clear_all_tt:0 "Todos los apodos han sido eliminados de todos los personajes vivos."
 
  ac_nickname_export_report:0 "Exportar Reporte de Apodos"
  ac_nickname_export_report_desc:0 "Genera un reporte detallado de todos los personajes con apodos y expórtalo a los registros del juego. El reporte se guardará en tu carpeta de registros de CK3."
  ac_nickname_export_report_tooltip:0 "Exportar datos de apodos a los registros"
+ ac_nickname_export_report_confirm:0 "Exportar Reporte"
  ac_nickname_export_report_tt:0 "El reporte de apodos ha sido exportado a:\n#EMP Documentos/Paradox Interactive/Crusader Kings III/logs/game.log#!\n\nEl reporte incluye:\n• ID del Personaje\n• Nombre del Personaje\n• Título Principal\n• Apodo Asignado"
 
 
