--- a/localization/english/ac_nickname_l_english.yml
+++ b/localization/english/ac_nickname_l_english.yml
@@ -2059,6 +2059,7 @@
  ac_nickname_toggle_debug:0 "Toggle Nickname Debug Mode"
  ac_nickname_toggle_debug_desc:0 "Enable or disable debug mode for the nickname system. Debug mode provides testing tools and information."
  ac_nickname_toggle_debug_tooltip:0 "Toggle debug mode for nickname testing"
+ ac_nickname_toggle_debug_confirm:0 "Toggle Debug Mode"
  ac_nickname_debug_mode_on_tt:0 "Debug mode is now #EMP ENABLED#!. You can now access testing tools."
  ac_nickname_debug_mode_off_tt:0 "Debug mode is now #EMP DISABLED#!. Testing tools are hidden."
 
@@ -2071,6 +2072,7 @@
  ac_nickname_clear:0 "Clear Nickname"
  ac_nickname_clear_desc:0 "Remove your current nickname to test receiving a new one."
  ac_nickname_clear_tooltip:0 "Remove your current nickname"
+ ac_nickname_clear_confirm:0 "Clear Nickname"
  ac_nickname_clear_tt:0 "Your nickname has been cleared. You can now receive a new one."
 
  ac_nickname_show_info:0 "Show Nickname Eligibility"
@@ -2089,25 +2091,30 @@
  ac_nickname_manual_block:0 "Manually Block Nicknames"
  ac_nickname_manual_block_desc:0 "Prevent yourself from receiving any nicknames."
  ac_nickname_manual_block_tooltip:0 "Block nickname assignment for this character"
+ ac_nickname_manual_block_confirm:0 "Block Nicknames"
  ac_nickname_manual_block_tt:0 "You will no longer receive nicknames until you unblock yourself."
  ac_nickname_not_already_blocked_tt:0 "You are not currently blocked"
 
  ac_nickname_manual_unblock:0 "Manually Unblock Nicknames"
  ac_nickname_manual_unblock_desc:0 "Allow yourself to receive nicknames again."
  ac_nickname_manual_unblock_tooltip:0 "Unblock nickname assignment for this character"
+ ac_nickname_manual_unblock_confirm:0 "Unblock Nicknames"
  ac_nickname_manual_unblock_tt:0 "You can now receive nicknames again."
 
  ac_nickname_give_all:0 "Give Nicknames to All Characters"
  ac_nickname_give_all_desc:0 "Trigger nickname assignment for ALL living characters aged 16+ who don't have a nickname. This may take a moment to process."
  ac_nickname_give_all_tooltip:0 "Give nicknames to all eligible characters"
+ ac_nickname_give_all_confirm:0 "Give Nicknames to All"
  ac_nickname_give_all_tt:0 "All living characters aged 16+ without nicknames will be evaluated for nickname assignment. This process may take a few in-game days."
 
  ac_nickname_clear_all:0 "Clear All Nicknames"
  ac_nickname_clear_all_desc:0 "Remove nicknames from ALL living characters in the world. Use with caution!"
  ac_nickname_clear_all_tooltip:0 "Clear all nicknames globally"
+ ac_nickname_clear_all_confirm:0 "Clear All Nicknames"
  ac_nickname_clear_all_tt:0 "All nicknames have been removed from all living characters."
 
  ac_nickname_export_report:0 "Export Nickname Report"
  ac_nickname_export_report_desc:0 "Generate a detailed report of all characters with nicknames and export it to the game logs. The report will be saved in your CK3 logs folder."
  ac_nickname_export_report_tooltip:0 "Export nickname data to logs"
+ ac_nickname_export_report_confirm:0 "Export Report"
  ac_nickname_export_report_tt:0 "Nickname report has been exported to:\n#EMP Documents/Paradox Interactive/Crusader Kings III/logs/game.log#!\n\nThe report includes:\n• Character ID\n• Character Name\n• Primary Title\n• Assigned Nickname"
