--- a/localization/spanish/ac_nickname_game_rules_l_spanish.yml
+++ b/localization/spanish/ac_nickname_game_rules_l_spanish.yml
@@ -1,31 +1,32 @@
 ﻿l_spanish:
  ### REGLAS DE JUEGO ###
- AC_NICKNAME_FREQUENCY:0 "Frecuencia de Asignación de Apodos"
+ rule_ac_nickname_frequency:0 "Frecuencia de Asignación de Apodos"
  
- AC_NICKNAME_FREQUENCY_VERY_RARE:0 "Muy Raro (5%)"
- AC_NICKNAME_FREQUENCY_VERY_RARE_DESC:0 "Los personajes tienen un #bold 5%#! de probabilidad por año de recibir un apodo. Los apodos son extremadamente raros."
+ setting_very_rare:0 "Muy Raro (5%)"
+ setting_very_rare_desc:0 "Los personajes tienen un #bold 5%#! de probabilidad por año de recibir un apodo. Los apodos son extremadamente raros."
  
- AC_NICKNAME_FREQUENCY_RARE:0 "Raro (10%)"
- AC_NICKNAME_FREQUENCY_RARE_DESC:0 "Los personajes tienen un #bold 10%#! de probabilidad por año de recibir un apodo. Los apodos son raros."
+ setting_rare:0 "Raro (10%)"
+ setting_rare_desc:0 "Los personajes tienen un #bold 10%#! de probabilidad por año de recibir un apodo. Los apodos son raros."
  
- AC_NICKNAME_FREQUENCY_MEDIUM:0 "Medio (20%)"
- AC_NICKNAME_FREQUENCY_MEDIUM_DESC:0 "Los personajes tienen un #bold 20%#! de probabilidad por año de recibir un apodo. #EMP Configuración predeterminada.#!"
+ setting_medium:0 "Medio (20%)"
+ setting_medium_desc:0 "Los personajes tienen un #bold 20%#! de probabilidad por año de recibir un apodo. #EMP Configuración predeterminada.#!"
  
- AC_NICKNAME_FREQUENCY_COMMON:0 "Común (30%)"
- AC_NICKNAME_FREQUENCY_COMMON_DESC:0 "Los personajes tienen un #bold 30%#! de probabilidad por año de recibir un apodo. Los apodos son bastante comunes."
+ setting_common:0 "Común (30%)"
+ setting_common_desc:0 "Los personajes tienen un #bold 30%#! de probabilidad por año de recibir un apodo. Los apodos son bastante comunes."
  
- AC_NICKNAME_FREQUENCY_FREQUENT:0 "Frecuente (40%)"
- AC_NICKNAME_FREQUENCY_FREQUENT_DESC:0 "Los personajes tienen un #bold 40%#! de probabilidad por año de recibir un apodo. Los apodos son frecuentes."
+ setting_frequent:0 "Frecuente (40%)"
+ setting_frequent_desc:0 "Los personajes tienen un #bold 40%#! de probabilidad por año de recibir un apodo. Los apodos son frecuentes."
  
- AC_NICKNAME_FREQUENCY_VERY_FREQUENT:0 "Muy Frecuente (50%)"
- AC_NICKNAME_FREQUENCY_VERY_FREQUENT_DESC:0 "Los personajes tienen un #bold 50%#! de probabilidad por año de recibir un apodo. Los apodos son muy frecuentes."
+ setting_very_frequent:0 "Muy Frecuente (50%)"
+ setting_very_frequent_desc:0 "Los personajes tienen un #bold 50%#! de probabilidad por año de recibir un apodo. Los apodos son muy frecuentes."
  
- AC_NICKNAME_FREQUENCY_HIGH:0 "Alto (60%)"
- AC_NICKNAME_FREQUENCY_HIGH_DESC:0 "Los personajes tienen un #bold 60%#! de probabilidad por año de recibir un apodo. La mayoría de los personajes elegibles obtendrán apodos."
+ setting_high:0 "Alto (60%)"
+ setting_high_desc:0 "Los personajes tienen un #bold 60%#! de probabilidad por año de recibir un apodo. La mayoría de los personajes elegibles obtendrán apodos."
  
- AC_NICKNAME_FREQUENCY_VERY_HIGH:0 "Muy Alto (75%)"
- AC_NICKNAME_FREQUENCY_VERY_HIGH_DESC:0 "Los personajes tienen un #bold 75%#! de probabilidad por año de recibir un apodo. Casi todos los personajes elegibles obtendrán apodos."
+ setting_very_high:0 "Muy Alto (75%)"
+ setting_very_high_desc:0 "Los personajes tienen un #bold 75%#! de probabilidad por año de recibir un apodo. Casi todos los personajes elegibles obtendrán apodos."
  
- AC_NICKNAME_FREQUENCY_MAXIMUM:0 "Máximo (100%)"
- AC_NICKNAME_FREQUENCY_MAXIMUM_DESC:0 "Los personajes tienen un #bold 100%#! de probabilidad por año de recibir un apodo. Todos los personajes elegibles recibirán un apodo garantizado."
+ setting_maximum:0 "Máximo (100%)"
+ setting_maximum_desc:0 "Los personajes tienen un #bold 100%#! de probabilidad por año de recibir un apodo. Todos los personajes elegibles recibirán un apodo garantizado."
+
 
